# rust-playground

./: Rust_Notes.md
lgr10_generic_types/: Cargo.toml
lgr10_generic_types/src/: main.rs
lgr11_traits/: Cargo.toml
lgr11_traits/src/: main.rs
lgr12_lifetimes/: Cargo.toml
lgr12_lifetimes/src/: main.rs
lgr13_testing/: Cargo.toml
lgr13_testing/src/: lib.rs
lgr13_testing/tests/: integration_test.rs
lgr15_19_minigrep/: Cargo.toml  output.txt
lgr15_19_minigrep/src/: lib.rs  main.rs
lgr15_minigrep/: Cargo.toml
lgr15_minigrep/src/: lib.rs  main.rs
lgr17_closures/: Cargo.toml
lgr17_closures/src/: main.rs
lgr18_iterators/: Cargo.toml
lgr18_iterators/src/: main.rs
lgr20_crate/: Cargo.toml
lgr20_crate/src/: lib.rs  main.rs
lgr22_box_smart_pointer/: Cargo.toml
lgr22_box_smart_pointer/src/: main.rs
lgr28_concurrency/: Cargo.toml
lgr28_concurrency/src/: main.rs
lgr2_guessing_game/: Cargo.toml
lgr2_guessing_game/src/: main.rs
lgr32_trait_objects/: Cargo.toml
lgr33_state_design_pattern/: Cargo.toml
lgr34_patterns_matching/: Cargo.toml
lgr35_pattern_syntax/: Cargo.toml
lgr36_unsafe_rust/: Cargo.toml
lgr37_advanced_traits/: Cargo.toml
lgr39_advanced_fn_and_closures/: Cargo.toml
lgr40_declarative_macros/: Cargo.toml
lgr41_hello_macro/: Cargo.toml
lgr41_procedural_macros/: Cargo.toml
lgr41_procedural_macros/src/: lib.rs  main.rs
lgr42_web_server/: 404.html  Cargo.toml  index.html
lgr6_enums/: Cargo.toml
lgr8_collections/: Cargo.toml
lgr9_error_handling/: Cargo.toml
minigrep/: output.txt  poem.txt
(+25 files in other folders)
